[tool.poetry]
name = "monthify"
version = "0.2.0"
description = "A python script to add saved spotify tracks to a monthly playlist."
authors = ["Madiba Hudson-Quansah <mhquansah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
cachetools = "^5.2.1"
rich = "^13.1.0"
spotipy = "^2.22.0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
